Add unit tests for CfMetadataParser, CfMetadataValidator, ApplicationMetadataBuilder
Fix RESERVED_KEY_NAMES in CfMetadataValidator to use HashSet construction
instead of Set.of() to tolerate duplicate string values that appear in both
MtaMetadataLabels and MtaMetadataAnnotations (e.g. "mta_id", "mta_namespace").

JIRA:LMCROSSITXSADEPLOY-1550